  When it ran out of the room, the I/O buffer was always doubled even if
  the text to be inserted was more than this length.

- Restored the jEdit 4.1 behavior of consuming key events that are bound
  to an action. So now you can bind A+f to a command, and pressing A+f
  will execute the command without popping up the File menu.

}}}
{{{ API Additions

- Icon theme support. Pass a URL to GUIUtilities.setIconPath() and all
  icons will be loaded from that URL prepended to the icon name.

}}}
{{{ API Changes

- Within an event listener, Buffer.isTransactionInProgress() always
  returns true, and transactionComplete() is now always called on each
  event listener after every buffer change. As far as I know, no plugins
  use the transaction API so this should not affect anyone.

}}}

}}}

{{{ Version 4.2pre4

Thanks to Chris Morris, Marcelo Vanzin, Ryan Fowler and Ryan Grove for
contributing to this release.

{{{ Syntax Highlighting

- Updated NSIS2 syntax highlighting (Ryan Grove).

- Modes from the user catalog file are checked first for a matching
  first line or file name glob (Ryan Fowler).

- Updated Ruby syntax highlighting (Chris Morris).

- Updated Pike syntax highlighting (Peter Lundqvist).

}}}
{{{ Scripting

- BeanShell 1.3b2 is now included. Improvements since 1.3a1 (which was
  included with jEdit 4.2pre3) include:

  - Properties style auto-allocation of variables.

    // foo is initially undefined
    foo.bar.gee = 42; 
    print( foo.bar.gee ); // 42

  - Scripted class support (with class keyword). Limitations:

    - Scripted classes may only extend other scripted classes
    - implement clauses are currently ignored
    - All Scripted classes appear as type bsh.This - they are
      effectively the same type of object.

  - The bsh.system object which is shared across Interpreter instances
    has been renamed "bsh.shared".  For backwards compatability it is
    still referenced as bsh.system as well.
